// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input/text-field should render a TextField 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

<div>
  <div
    class="emotion-0 emotion-1"
    value="Default value"
  >
    <div
      style="position: relative; display: flex; width: 100%;"
    >
      <input
        class="emotion-2 emotion-3"
        value="Default value"
      />
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with a char counter 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-4 {
  color: rgba(154,152,151,0.85);
  font-size: 12px;
  margin: 0;
  text-align: right;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    value="Default value"
  >
    <div
      style="position: relative; display: flex; width: 100%;"
    >
      <input
        class="emotion-2 emotion-3"
        value="Default value"
      />
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      />
      <p
        class="emotion-4 emotion-5"
        color="grey.400"
      >
        13
      </p>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with a helper 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-4 {
  color: rgba(154,152,151,0.85);
  font-size: 12px;
  margin: 0;
  margin-left: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    value="value"
  >
    <div
      style="position: relative; display: flex; width: 100%;"
    >
      <input
        class="emotion-2 emotion-3"
        value="value"
      />
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      >
        <p
          class="emotion-4 emotion-5"
          color="grey.400"
        >
          This is a helper text
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with a limit 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-4 {
  color: rgba(154,152,151,0.85);
  font-size: 12px;
  margin: 0;
  text-align: right;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    value="value"
  >
    <div
      style="position: relative; display: flex; width: 100%;"
    >
      <input
        class="emotion-2 emotion-3"
        maxlength="10"
        value="value"
      />
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      />
      <p
        class="emotion-4 emotion-5"
        color="grey.400"
      >
        5
        /10
      </p>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with a valid state 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  border-color: #59BC6F;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  border-color: #59BC6F;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
  box-shadow: 0 2px 4px 0 rgba(89,188,111,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-4 {
  top: 1.5rem;
  right: 1rem;
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #59BC6F;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-4 .i-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <div
    class="emotion-0 emotion-1"
    value="value"
  >
    <div
      style="position: relative; display: flex; width: 100%;"
    >
      <input
        class="emotion-2 emotion-3"
        value="value"
      />
      <div
        class="emotion-4 emotion-5"
      >
        <span
          class="i-icon i-icon-check"
        >
          <svg
            fill="none"
            height="10"
            viewBox="0 0 48 48"
            width="10"
          >
            <path
              d="M43 11L16.875 37L5 25.1818"
              stroke="#fff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="8"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with an error message (from error object) 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  border-color: #EB5757;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  border-color: #EB5757;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
  box-shadow: 0 2px 4px 0 rgba(235,87,87,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-4 {
  top: 1.5rem;
  right: 1rem;
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-4 .i-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  color: #EB5757;
  font-size: 12px;
  margin: 0;
  margin-left: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    value="value"
  >
    <div
      style="position: relative; display: flex; width: 100%;"
    >
      <input
        class="emotion-2 emotion-3"
        value="value"
      />
      <div
        class="emotion-4 emotion-5"
      >
        <span
          class="i-icon i-icon-close"
        >
          <svg
            fill="none"
            height="10"
            viewBox="0 0 48 48"
            width="10"
          >
            <path
              d="M8 8L40 40"
              stroke="#fff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="8"
            />
            <path
              d="M8 40L40 8"
              stroke="#fff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="8"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      >
        <p
          class="emotion-6 emotion-7"
          color="red.500"
        >
          This is an error message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with an error message (from string) 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  border-color: #EB5757;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  border-color: #EB5757;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
  box-shadow: 0 2px 4px 0 rgba(235,87,87,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-4 {
  top: 1.5rem;
  right: 1rem;
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-4 .i-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  color: #EB5757;
  font-size: 12px;
  margin: 0;
  margin-left: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    value="value"
  >
    <div
      style="position: relative; display: flex; width: 100%;"
    >
      <input
        class="emotion-2 emotion-3"
        value="value"
      />
      <div
        class="emotion-4 emotion-5"
      >
        <span
          class="i-icon i-icon-close"
        >
          <svg
            fill="none"
            height="10"
            viewBox="0 0 48 48"
            width="10"
          >
            <path
              d="M8 8L40 40"
              stroke="#fff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="8"
            />
            <path
              d="M8 40L40 8"
              stroke="#fff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="8"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      >
        <p
          class="emotion-6 emotion-7"
          color="red.500"
        >
          This is an error message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with error 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  border-color: #EB5757;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  border-color: #EB5757;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
  box-shadow: 0 2px 4px 0 rgba(235,87,87,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-4 {
  top: 1.5rem;
  right: 1rem;
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-4 .i-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  color: #EB5757;
  font-size: 12px;
  margin: 0;
  margin-left: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    value="Default value"
  >
    <div
      style="position: relative; display: flex; width: 100%;"
    >
      <input
        class="emotion-2 emotion-3"
        value="Default value"
      />
      <div
        class="emotion-4 emotion-5"
      >
        <span
          class="i-icon i-icon-close"
        >
          <svg
            fill="none"
            height="10"
            viewBox="0 0 48 48"
            width="10"
          >
            <path
              d="M8 8L40 40"
              stroke="#fff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="8"
            />
            <path
              d="M8 40L40 8"
              stroke="#fff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="8"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      >
        <p
          class="emotion-6 emotion-7"
          color="red.500"
        >
          error message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with label 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  font-size: 12px;
  margin: 0;
  margin-left: 0.5rem;
  margin-bottom: 0.25rem;
}

.emotion-4 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-4:focus,
.emotion-4:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-4:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-4:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-4:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

<div>
  <div
    class="emotion-0 emotion-1"
    value="Default value"
  >
    <label
      class="emotion-2 emotion-3"
      style="display: block;"
    >
      TextField Label
    </label>
    <div
      style="position: relative; display: flex; width: 100%;"
    >
      <input
        class="emotion-4 emotion-5"
        value="Default value"
      />
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a disabled TextField 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

<div>
  <div
    class="emotion-0 emotion-1"
    value="value"
  >
    <div
      style="position: relative; display: flex; width: 100%;"
    >
      <input
        class="emotion-2 emotion-3"
        disabled=""
        value="value"
      />
    </div>
  </div>
</div>
`;
